--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minimalist-portfolio-json",
+  "name": "dotmd.io",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -7,12 +7,33 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\""
   },
   "dependencies": {
     "@astrojs/check": "0.4.1",
+    "@astrojs/db": "^0.11.0",
+    "@astrojs/mdx": "^2.3.1",
+    "@astrojs/react": "^3.3.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "astro": "4.3.2",
-    "hotkeypad": "0.1.0",
+    "cmdk": "^1.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^9.2.0",
+    "eslint-plugin-astro": "^1.1.2",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "prettier": "^3.2.5",
+    "prettier-config-standard": "^7.0.0",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-tailwindcss": "^0.5.14"
   }
 }
