--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "baseUrl": "/Users/aaron/GitHub/dotmd.dev",
+    "baseUrl": "./",
     "paths": {
       "@cv": ["./cv.json"],
       "@/*": ["src/*"]
