--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^3.2.5",
     "prettier-config-standard": "^7.0.0",
     "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.14"
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss-animated": "^1.0.1"
   }
 }
