chore: Update npm dependencies and remove unused linting configuration

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\""
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "0.4.1",
