--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   },
   "dependencies": {
     "@astrojs/check": "0.4.1",
-    "@astrojs/db": "^0.11.0",
+    "@astrojs/db": "^0.11.1",
     "@astrojs/mdx": "^2.3.1",
-    "@astrojs/react": "^3.3.2",
+    "@astrojs/react": "^3.3.4",
     "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "astro": "4.3.2",
     "cmdk": "^1.0.0",
+    "ninja-keys": "^1.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
+    "tippy.js": "^6.3.7",
     "typescript": "5.3.3"
   },
   "devDependencies": {
