--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/mdx": "^2.3.1",
     "@astrojs/react": "^3.3.4",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/poppins": "^5.0.14",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "astro": "4.3.2",
