--- a/package.json
+++ b/package.json
@@ -14,21 +14,35 @@
     "@astrojs/db": "^0.11.1",
     "@astrojs/mdx": "^2.3.1",
     "@astrojs/react": "^3.3.4",
+    "@astrojs/rss": "^4.0.5",
+    "@astrojs/sitemap": "^3.1.4",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/poppins": "^5.0.14",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/sanitize-html": "^2.11.0",
     "astro": "4.3.2",
     "cmdk": "^1.0.0",
+    "hast-util-to-string": "^3.0.0",
+    "markdown-it": "^14.1.0",
+    "mdast-util-to-string": "^4.0.0",
     "ninja-keys": "^1.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "reading-time": "^1.5.0",
+    "rehype-accessible-emojis": "^0.3.2",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-smartypants": "^3.0.1",
+    "remark-toc": "^9.0.0",
+    "sanitize-html": "^2.13.0",
     "tailwindcss": "^3.4.3",
     "tippy.js": "^6.3.7",
     "typescript": "5.3.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/html-escaper": "^3.0.2",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^9.2.0",
     "eslint-plugin-astro": "^1.1.2",
