refactor: Update package.json and pnpm-lock.yaml to include hastscript@9.0.0

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "4.3.2",
     "cmdk": "^1.0.0",
     "hast-util-to-string": "^3.0.0",
+    "hastscript": "^9.0.0",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
     "ninja-keys": "^1.2.2",
