--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cmdk": "^1.0.0",
     "hast-util-to-string": "^3.0.0",
     "hastscript": "^9.0.0",
+    "html-escaper": "^3.0.3",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
     "ninja-keys": "^1.2.2",
