--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "0.4.1",
+    "@astrojs/cloudflare": "^10.2.6",
     "@astrojs/db": "^0.11.1",
     "@astrojs/mdx": "^2.3.1",
     "@astrojs/react": "^3.3.4",
