--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build --remote",
+    "build": "astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -21,7 +21,6 @@
     "@fontsource/poppins": "^5.0.14",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "@types/sanitize-html": "^2.11.0",
     "astro": "4.3.2",
     "cmdk": "^1.0.0",
     "hast-util-to-string": "^3.0.0",
@@ -46,6 +45,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "@types/html-escaper": "^3.0.2",
+    "@types/sanitize-html": "^2.11.0",
     "@typescript-eslint/parser": "^7.9.0",
     "eslint": "^9.2.0",
     "eslint-plugin-astro": "^1.2.0",
