--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@astrojs/sitemap": "^3.1.4",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/poppins": "^5.0.14",
+    "@sendgrid/mail": "^8.1.3",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "astro": "4.3.2",
