--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "remark-smartypants": "^3.0.1",
     "remark-toc": "^9.0.0",
     "sanitize-html": "^2.13.0",
+    "sonner": "^1.4.41",
     "tailwindcss": "^3.4.3",
     "tippy.js": "^6.3.7",
     "typescript": "5.3.3"
