--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rehype-slug": "^6.0.0",
     "remark-smartypants": "^3.0.1",
     "remark-toc": "^9.0.0",
+    "resend": "^3.2.0",
     "sanitize-html": "^2.13.0",
     "tailwindcss": "^3.4.3",
     "tippy.js": "^6.3.7",
