--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "prettier-config-standard": "^7.0.0",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss-animated": "^1.0.1",
-    "vite": "^5.2.11"
+    "tailwindcss-animated": "^1.0.1"
   }
 }
