--- a/package.json
+++ b/package.json
@@ -10,50 +10,51 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.4.1",
-    "@astrojs/cloudflare": "^10.2.6",
-    "@astrojs/db": "^0.11.1",
-    "@astrojs/mdx": "^2.3.1",
-    "@astrojs/react": "^3.3.4",
-    "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.1.4",
-    "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/poppins": "^5.0.14",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0",
-    "astro": "4.3.2",
-    "cmdk": "^1.0.0",
-    "hast-util-to-string": "^3.0.0",
-    "hastscript": "^9.0.0",
+    "@astrojs/check": "0.9.4",
+    "@astrojs/cloudflare": "^12.2.3",
+    "@astrojs/db": "^0.14.7",
+    "@astrojs/mdx": "^4.1.0",
+    "@astrojs/react": "^4.2.1",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.2.1",
+    "@fontsource/poppins": "^5.2.5",
+    "@tailwindcss/vite": "^4.0.9",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "astro": "^5.4.1",
+    "cmdk": "^1.0.4",
+    "hast-util-to-string": "^3.0.1",
+    "hastscript": "^9.0.1",
     "html-escaper": "^3.0.3",
     "markdown-it": "^14.1.0",
     "mdast-util-to-string": "^4.0.0",
     "ninja-keys": "^1.2.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "reading-time": "^1.5.0",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
-    "remark-smartypants": "^3.0.1",
+    "remark-smartypants": "^3.0.2",
     "remark-toc": "^9.0.0",
-    "resend": "^3.2.0",
-    "sanitize-html": "^2.13.0",
-    "sonner": "^1.4.41",
-    "tailwindcss": "^3.4.3",
+    "resend": "^4.1.2",
+    "sanitize-html": "^2.14.0",
+    "sonner": "^2.0.1",
+    "tailwindcss": "^4.0.9",
     "tippy.js": "^6.3.7",
-    "typescript": "5.3.3"
+    "typescript": "5.8.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
-    "@types/html-escaper": "^3.0.2",
-    "@types/sanitize-html": "^2.11.0",
-    "eslint": "^9.2.0",
-    "eslint-plugin-astro": "^1.2.0",
-    "prettier": "^3.2.5",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/html-escaper": "^3.0.4",
+    "@types/sanitize-html": "^2.13.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "prettier": "^3.5.3",
     "prettier-config-standard": "^7.0.0",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss-animated": "^1.0.1"
-  }
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss-animated": "^2.0.0"
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
